<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.TaskCreateFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/task_name_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="30dp"
        app:helperTextTextColor="@color/error_color"
        android:hint="@string/task_name_hint"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/task_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:maxLength="40"
            android:maxLines="3"/>

    </com.google.android.material.textfield.TextInputLayout>


    <EditText
        android:id="@+id/task_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/task_desc_hint"
        android:textSize="16sp"
        android:maxLines="8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/task_name_input_layout"
        app:layout_constrainedWidth="true"/>

    <RadioGroup
        android:id="@+id/task_priority_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/task_description">

        <RadioButton
            android:id="@+id/low_priority_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/low_priority_task"
            android:textSize="14sp"/>
        <RadioButton
            android:id="@+id/medium_priority_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium_priority_task"
            android:textSize="14sp"/>

        <RadioButton
            android:id="@+id/high_priority_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high_priority_task"
            android:textSize="14sp"/>

    </RadioGroup>

    <TextView
        android:id="@+id/task_date_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_date_title"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/task_priority_group"/>

    <TextView
        android:id="@+id/task_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginStart="40dp"
        android:hint="@string/task_date_hint"
        tools:text="30 MAY, 2021"
        android:maxLines="1"
        app:layout_constraintTop_toTopOf="@id/task_date_title"
        app:layout_constraintBottom_toBottomOf="@id/task_date_title"
        app:layout_constraintStart_toEndOf="@id/task_date_title"/>

    <TextView
        android:id="@+id/task_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        android:hint="@string/task_time_hint"
        tools:text="10:00"
        android:maxLines="1"
        app:layout_constraintTop_toTopOf="@id/task_date_title"
        app:layout_constraintBottom_toBottomOf="@id/task_date_title"
        app:layout_constraintStart_toEndOf="@id/task_date"/>

    <TextView
        android:id="@+id/task_remind_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_remind_flag_title"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/task_date_title"/>

    <Switch
        android:id="@+id/task_remind_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="@id/task_remind_title"
        app:layout_constraintBottom_toBottomOf="@id/task_remind_title"
        app:layout_constraintStart_toEndOf="@id/task_remind_title"/>


    <Button
        android:id="@+id/task_update_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/update_task"
        android:background="@drawable/button_shape"
        android:backgroundTint="@color/purple_200"
        app:layout_constraintTop_toBottomOf="@id/task_remind_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>